concord_macros/tests/usage/fail/fail_missing_required_param.stderr
error[E0061]: this method takes 1 argument but 0 arguments were supplied
  --> tests/usage/fail/fail_missing_required_param.rs:19:25
   |
19 |     let _ = api.users().get().await?;
   |                         ^^^-- argument #1 of type `u64` is missing
   |
note: method defined here
  --> tests/usage/fail/fail_missing_required_param.rs:11:13
   |
11 |         GET Get(id: u64)
   |             ^^^ -------
help: provide the argument
   |
19 |     let _ = api.users().get(/* u64 */).await?;
   |                             +++++++++
